--- a/wake.toml
+++ b/wake.toml
@@ -1,6 +1,7 @@
 [compiler.solc]
 exclude_paths = ["node_modules", "venv", ".venv", "lib", "script", "test"]
 include_paths = ["node_modules"]
+evm_version = "istanbul"
 
 [detectors]
 exclude = [
@@ -21,7 +22,7 @@ exclude_paths = ["node_modules", "lib", "script"]
 cmd = "anvil"
 
 [testing.anvil]
-cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent"
+cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent --hardfork istanbul"
 
 [testing.ganache]
 cmd_args = "-k istanbul -q"
