--- a/wake.toml
+++ b/wake.toml
@@ -22,10 +22,10 @@ exclude_paths = ["node_modules", "lib", "script"]
 cmd = "anvil"
 
 [testing.anvil]
-cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent --hardfork istanbul"
+cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent --hardfork paris"
 
 [testing.ganache]
-cmd_args = "-k istanbul -q"
+cmd_args = "-k paris -q"
 
 [testing.hardhat]
 cmd_args = ""
