--- a/wake.toml
+++ b/wake.toml
@@ -1,8 +1,3 @@
-[compiler.solc]
-exclude_paths = ["node_modules", "venv", ".venv", "lib", "script", "test"]
-include_paths = ["node_modules"]
-evm_version = "istanbul"
-
 [detectors]
 exclude = [
     "reentrancy",
@@ -22,10 +17,4 @@ exclude_paths = ["node_modules", "lib", "script"]
 cmd = "anvil"
 
 [testing.anvil]
-cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent --hardfork paris"
-
-[testing.ganache]
-cmd_args = "-k paris -q"
-
-[testing.hardhat]
-cmd_args = ""
+cmd_args = "--prune-history 100 --transaction-block-keeper 10 --steps-tracing --silent"
